working state: images are taken and saved locally and ready to be sent to server for predictions

--- a/SelfIn-Frontend/selfin-app/src/app/camera/camera.component.html
+++ b/SelfIn-Frontend/selfin-app/src/app/camera/camera.component.html
@@ -7,7 +7,7 @@
           <button class="btn btn-primary" (click)="capture()">Capture Image</button>
        </div>
        <div class="p-1">
-          <canvas #canvas class="vid"></canvas>
+          <canvas id='picture' #canvas class="vid"></canvas>
        </div>
     </div>
  </div>
