--- a/SelfIn-Frontend/selfin-app/src/app/login/login.component.css
+++ b/SelfIn-Frontend/selfin-app/src/app/login/login.component.css
@@ -1,16 +1,7 @@
-#form-style{
-    position: absolute;
-    /* top: 50%;
-    left: 50%;
-    margin-top: -50px;
-    margin-left: -50px;
-    width: 100px;
-    height: 100px; */
+html, body {
+    margin: 0;
+    min-height: 100%;
+    background-color: #f5f5f5;
 }
 
-
-
-body {
-  background-color: #f5f5f5;
-}
 
