--- a/SelfIn-Frontend/selfin-app/src/app/login/login.component.html
+++ b/SelfIn-Frontend/selfin-app/src/app/login/login.component.html
@@ -1,8 +1,8 @@
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<body style="background-color: #f5f5f5;">
-    <form action="/login" method="POST" style="margin-top: 10%;" id="form-style">
+
+    <form style="margin-top: 10%;" id="form-style">
         <div class="container">
             <div >
                 <svg  style="margin-left: 46%;" class="bi bi-person-square" width="5em" height="5em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -24,10 +24,9 @@
                     </div>              
                     <div class="form-group">
                         <input class="btn btn-md btn-primary btn-block" type="submit" value="Login"> 
-                        <button class="btn btn-md btn-primary btn-block" type="submit" > SelfIn </button>
+                        <button class="btn btn-md btn-primary btn-block" routerLink="/Camera"> SelfIn </button>
                     </div>
                 </div>
             </div>
         </div>
     </form>
-</body>
