--- a/SelfIn-Frontend/selfin-app/src/app/camera/camera.component.css
+++ b/SelfIn-Frontend/selfin-app/src/app/camera/camera.component.css
@@ -1,4 +1,13 @@
 .vid {
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    height: 50%;
 }
+
+.button {
+    margin: 10px;
+}
+
+#main-container{
+    text-align: center;
+}
+
