--- a/SelfIn-Frontend/selfin-app/src/app/camera/camera.component.html
+++ b/SelfIn-Frontend/selfin-app/src/app/camera/camera.component.html
@@ -1,13 +1,17 @@
-<div class="container vh-100">
-    <div class="d-flex flex-column align-items-center">
-       <div class="p-1">
-          <video #video class="vid" autoplay></video>
-       </div>
-       <div class="pb-2">
-          <button class="btn btn-primary" (click)="capture()">Capture Image</button>
-       </div>
-       <div class="p-1">
-          <canvas id='picture' #canvas class="vid"></canvas>
-       </div>
-    </div>
- </div>
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<div class="container vh-100" id="main-container">
+   <div class="d-flex flex-column align-items-center">
+      <div class="p-1">
+         <video #video class="vid" autoplay></video>
+      </div>
+      <div class="pb-2">
+         <button class="btn btn-lg btn-primary button" (click)="capture()"><i class="fa fa-camera" aria-hidden="true"></i></button>
+         <button class="btn btn-lg btn-primary button" (click)="listen()"><i class="fa fa-microphone" aria-hidden="true"></i></button>
+      </div>
+      <div class="p-1">
+         <canvas id='picture' #canvas class="vid"></canvas>
+      </div>
+   </div>
+</div>
