Basic Work flow working.

--- a/SelfIn-Frontend/selfin-app/src/app/camera/camera.component.html
+++ b/SelfIn-Frontend/selfin-app/src/app/camera/camera.component.html
@@ -10,7 +10,7 @@
          <button class="btn btn-lg btn-primary button" (click)="capture()"><i class="fa fa-camera" aria-hidden="true"></i></button>
          <button class="btn btn-lg btn-primary button" (click)="listen()"><i class="fa fa-microphone" aria-hidden="true"></i></button>
       </div>
-      <div class="p-1">
+      <div class="p-1" style="visibility: hidden;">
          <canvas id='picture' #canvas class="vid"></canvas>
       </div>
    </div>
