finalised style changes on login and selfin views

--- a/SelfIn-Frontend/selfin-app/src/app/login/login.component.html
+++ b/SelfIn-Frontend/selfin-app/src/app/login/login.component.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
-    <form style="margin-top: 10%;" id="form-style">
+    <form id="form-style">
         <div class="container">
             <div >
                 <svg  style="margin-left: 46%;" class="bi bi-person-square" width="5em" height="5em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
