--- a/SelfIn-Frontend/selfin-app/src/app/camera/camera.component.css
+++ b/SelfIn-Frontend/selfin-app/src/app/camera/camera.component.css
@@ -1,13 +1,60 @@
 .vid {
-    width: 50%;
+    /* width: 50%; */
     height: 50%;
+    z-index: -1;
 }
 
-.button {
-    margin: 10px;
+.container{
+    position: relative;
+    text-align: center;
+}
+
+
+.container>.button
+{
+    height: 75px;
+    left: 52%;
+    margin: -64px 0 0 -64px;
+    position: absolute;
+    top: 93%;
+    width: 80px;
+    z-index: 1;
+    border-radius: 50%;
+    opacity: 60%
+}
+.container>.text
+{
+    height: 75px;
+    left: 37%;
+    margin: -66px 0 0 -55px;
+    position: absolute;
+    top: 10%;
+    width: 400px;
+    z-index: 1;
+    border-radius: 50%;
+}
+
+#textBox{
+    font-size: 30px; 
+    margin-top: 25px; 
+    color: white;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 #main-container{
-    text-align: center;
+    background-color: #000000;
+    min-width: 100%;
+    padding:0px;
+
+}
+
+#second-container{
+    background-color: #000000;
+}
+
+html{
+    margin: 0;
+    min-height: 100%;
+    background-color: #000000;
 }
 
