--- a/SelfIn-Frontend/selfin-app/src/app/camera/camera.component.html
+++ b/SelfIn-Frontend/selfin-app/src/app/camera/camera.component.html
@@ -2,19 +2,16 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <div class="container vh-100" id="main-container">
-   <div class="d-flex flex-column align-items-center">
-      <div class="p-1">
+   <div class="d-flex flex-column align-items-center" id="second-container">
+      <div class="container">
+         <div class="text" *ngIf="spokenText != ''">
+            <p id="textBox"> You Said: <strong>{{spokenText}}</strong></p>
+         </div>
          <video #video class="vid" autoplay></video>
-      </div>
-      <div class="pb-2">
-         <button class="btn btn-lg btn-primary button" (click)="capture()"><i class="fa fa-camera" aria-hidden="true"></i></button>
-         <button class="btn btn-lg btn-primary button" (click)="listen()"><i class="fa fa-microphone" aria-hidden="true"></i></button>
+         <button class="btn btn-lg btn-circle btn-light button" (click)="listen()"><i class="fa fa-unlock-alt fa-2x" aria-hidden="true"></i></button>
       </div>
       <div class="p-1" style="visibility: hidden;">
          <canvas id='picture' #canvas class="vid"></canvas>
-      </div>
-      <div *ngIf="spokenText != ''">
-         <p id="textBox"> You Said: <strong>{{spokenText}}</strong></p>
       </div>
    </div>
 </div>
