--- a/SelfIn-Frontend/selfin-app/src/app/login/login.component.css
+++ b/SelfIn-Frontend/selfin-app/src/app/login/login.component.css
@@ -1,7 +1,16 @@
-html, body {
+html, body{
     margin: 0;
     min-height: 100%;
     background-color: #f5f5f5;
+}
+
+#form-style{
+    padding-bottom: 9%;
+    
+}
+
+.container{
+    padding-top: 10%;
 }
 
 
