--- a/SelfIn-Frontend/selfin-app/src/app/camera/camera.component.css
+++ b/SelfIn-Frontend/selfin-app/src/app/camera/camera.component.css
@@ -9,6 +9,9 @@
     text-align: center;
 }
 
+.alert{
+    margin-left: 5px;
+}
 
 .container>.button
 {
@@ -36,16 +39,19 @@
 
 #textBox{
     font-size: 30px; 
-    margin-top: 25px; 
+    /* margin-top: 20px;  */
     color: white;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
+#picture{
+    z-index: 1;
 }
 
 #main-container{
     background-color: #000000;
     min-width: 100%;
     padding:0px;
-
 }
 
 #second-container{
